# hypomnemata

./: .gitignore  CHANGELOG.md  CLI_DEMO.md  CONTRIBUTING.md  INSTALL.md  LICENCE  Makefile  README.md  RELEASING.md  SECURITY.md  hypo.toml.example  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/vault/: abcd1234.md  anchor_test.md  beta5678.md  cd20766.md  delta4567.md  gamma9abc.md  test1234.md
src/: cli.py  lint.py
src/export/: quartz.py
src/hypomnemata/: __init__.py  cli.py  config.py  lint.py  locate.py  runtime.py  watch.py
src/hypomnemata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hypomnemata/adapters/: fs_storage.py  idgen.py  markdown_parser.py  resolver_index.py  sqlite_index.py  yaml_codec.py
src/hypomnemata/api/: __init__.py  app.py
src/hypomnemata/assets/: __init__.py  scanner.py  verify.py
src/hypomnemata/core/: meta.py  model.py  ports.py  slicer.py  utils.py  vault.py
src/hypomnemata/export/: quartz.py
src/hypomnemata/format/: __init__.py  fm.py  formatter.py  links.py  text.py
src/hypomnemata/import_migrate/: __init__.py  apply.py  audit.py  id_strategies.py  migrate.py  models.py  plan.py  rollback.py
tests/: test_aliases.py  test_api.py  test_assets_scanner.py  test_config.py  test_format_fm.py  test_format_links.py  test_format_text.py  test_heading_slice.py  test_import_apply.py  test_import_plan.py  test_label_slice.py  test_locate_cli.py  test_meta.py  test_migrate_links.py  test_quartz_transclusion.py  test_slugify.py  test_sqlite_index.py  test_version.py  test_watch.py  test_yank_cli.py
