[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypomnemata"
dynamic = ["version"]
description = "Rhizomatic, atomic notes with flat storage, random IDs, links and transclusion."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Byron Denham"}]
dependencies = [
  "PyYAML>=6.0.1",
  "tomli>=2.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-PyYAML",
  "httpx>=0.27",  # For testing FastAPI endpoints
  "build>=1.0",
  "shiv>=1.0",
]
api = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
]
watch = [
  "watchdog>=4",
]

[project.scripts]
hypo = "hypomnemata.cli:main"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.dynamic]
version = {attr = "hypomnemata.__version__"}
